fixed navbar spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,7 +86,7 @@ body {
 
 .main {
   position: relative;
-  top: 45px;
+  top: 40px;
   z-index: 2;
   padding-left: 5px;
 }
