--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -15,10 +15,9 @@
 .title {
   font-size: var(--title-font);
   font-family: var(--youngblood);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "studio pro";
   padding-left: 4px;
   color: var(--title);
-  letter-spacing: 0.05rem;
   mix-blend-mode: difference;
 }
 
@@ -32,7 +31,7 @@
   width: 15%;
   font-family: 'youngblood';
   mix-blend-mode: difference;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "studio pro";
 
   @media screen and (width <=768px) {
     font-size: 0.7rem;
